openshift-resources/app-hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: demo-test
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
